<resources>
    <string name="app_name">Schedule</string>
    <string name="system_theme">Системная</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Тёмная</string>
    <string name="schedule">Расписание</string>
    <string name="numerator">Числитель</string>
    <string name="denominator">Знаменатель</string>
    <string name="change_schedule">Изменить расписание</string>
    <string name="temp_schedule">Временное расписание</string>
    <string name="lessons_not_founded">Занятий не найдено</string>
    <string name="homework">Домашнее задание</string>
    <string name="homeworks">Домашние задания</string>
    <string name="homeworks_not_founded">Домашних заданий нету</string>
    <string name="next">Продолжить</string>
    <string name="ok">Готово</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="teacher">Преподаватель</string>
    <string name="teacher_surname">Фамилия преподавателя</string>
    <string name="teacher_name">Имя преподавателя</string>
    <string name="teacher_patronymic">Отчество преподавателя</string>
    <string name="lesson_name">Название пары</string>
    <string name="cabinet">Кабинет</string>
    <string name="choose_flow_lvl">Выберите уровень образования</string>
    <string name="choose_course">Выберите курс</string>
    <string name="choose_group">Выберите группу</string>
    <string name="choose_subgroup">Выберите подгруппу</string>
    <string name="choose_theme">Выбрать тему</string>
    <string name="settings">Настройки</string>
    <string name="countdown_beginning">Начало отсчета числителя</string>
    <string name="change_flow">Сменить группу</string>
    <string name="font_size">Размер шрифта</string>
    <string name="choose_date">Выберите дату</string>
    <string name="flow_lvl_0">Бакалавриат/Специалитет</string>
    <string name="flow_lvl_1">Магистратура</string>
    <string name="flow_lvl_2">Аспирантура</string>
    <string name="import_schedule">Импортировать расписание</string>
    <string name="export_schedule">Экспортировать расписание</string>
    <string name="schedule_exported">Файл успешно добавлен в Загрузки</string>
    <string name="new_course">Новый курс</string>
    <string name="new_group">Новая группа</string>
    <string name="new_subgroup">Новая подгруппа</string>
    <string name="course_must_be_number">Курс должен быть числом</string>
    <string name="group_must_be_number">Группа должна быть числом</string>
    <string name="subgroup_must_be_number">Подгруппа должна быть числом</string>
    <string name="error">Произошла ошибка</string>
    <string name="lesson_wont_be">Пары не будет</string>
    <string name="replace">Заменить</string>
    <string name="display_mode">Режим отображения расписания</string>
    <string name="full_display_mode">Полное отображение</string>
    <string name="compact_display_mode">Компактное отображение</string>
    <string name="change_homework">Изменить ДЗ</string>
    <string name="activate_server">Включить серверную синхронизацию</string>
    <string name="deactivate_server">Выключить серверную синхронизацию</string>
    <string name="clear_db">Очистить данные</string>
    <string name="find">Найти</string>
    <string name="find_teacher">Найти преподавателя</string>
    <string name="not_found">Не найдено</string>
    <string name="session_starts">Занятий больше нет, началась сессия</string>
    <string name="session_ends">Занятий нет, каникулы</string>
</resources>