<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/red_circle"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_change_schedule"
            android:icon="@drawable/red_circle"
            android:title="@string/change_schedule" />
        <item
            android:id="@+id/nav_temp_schedule"
            android:icon="@drawable/red_circle"
            android:title="@string/temp_schedule" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/red_circle"
            android:title="@string/homeworks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/red_circle"
            android:title="@string/settings" />
    </group>
</menu>